2006-04-29  David Hampton  <hampton@employees.org>

	* src/report/report-system/report.scm: Don't load a custom report
	that has the same name as a standard report.  Fixes #168250.

	* src/bin/gnucash-bin.c: Load the user config earlier in startup.
	Fixes the missing custom report problem #338668.

	* src/register/register-gnome/gnucash-sheet.c: Lower the minimum
	required width of the register.  This does affect the size
	constraint imposed by the register summary bar.

2006-04-28  David Hampton  <hampton@employees.org>

	* configure.in: Default to --enable-error-on-warning only in svn
	based source trees. Fixes #330687.

	* src/gnome/window-reconcile.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/engine/gnc-lot.[ch]:
	* src/engine/Transaction.c:
	* src/engine/Scrub2.c:
	* src/engine/cap-gains.c: Mike Alexander's patch to fix lot date
	calculation, and to include all splits when computing capital
	gain's instead of just the opening lot.  Scrub lots when scrubbing
	everything else.  Some MacOs X fixes.

	* src/gnome/gnc-plugin-basic-commands.c: Finishing all pending
	transactions before new and open commands, not just save commands.
	Fixes #334090.

2006-04-27  Christian Stimming  <stimming@tuhh.de>

	* po/fr.po: Updated French translation by Fabrice Kurz
	<kurzf@voila.fr>.

	* src/import-export/hbci/hbci-interaction.c: Fix
	GNCInteractor_hadErrors() that reported too many errors. Fixes
	#339504.

2006-04-26  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c
	(scheduledxaction_editor_dialog_destroy): re-order SX disolution
	vs. ui teardown.  Add comment info-request response.

2006-04-26  Christian Stimming <stimming@tuhh.de>

	* doc/gnucash.1.in: Properly quote marks. Bug #339731.

2006-04-25  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/qif-to-gnc.scm:
	* src/import-export/qif-import/qif-merge-groups.scm:
	* src/import-export/qif-import/qif-file.scm:
	* src/import-export/qif-import/druid-qif-import.c: